--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,11 @@
-= TESTING ENVIRONMENT
+= Promptweet
+
+== TESTING ENVIRONMENT
 * Ruby 1.8.7
-* libgtk2-dev 2.20.0-0ubuntu4
+* libgtk2-bin 2.20.0-0ubuntu4
 * libgtk2-ruby1.8 0.19.3-1ubuntu3
 
-= LICENSE
+== LICENSE
 * MIT Licenese
 * The icon file is under GNU General Public License
  openPhone v1, by walrick
