--- a/README.rdoc
+++ b/README.rdoc
@@ -6,7 +6,7 @@
 * libgtk2-ruby1.8 0.19.3-1ubuntu3
 
 == LICENSE
-* MIT Licenese
-* The icon file is under GNU General Public License
+* The MIT Licenese
+* The icon file was created by the following author and it is under GNU General Public License
  openPhone v1, by walrick
  http://walrick.deviantART.com
